syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.ids.argus.core.grpc";
option java_outer_classname = "ArgusGrpcServerProto";
option objc_class_prefix = "Argus";

service ArgusService {
  rpc open (stream OpenRequest) returns (stream OpenResponse) {}
}

message ArgusModule {
  string name = 1;
  string version = 2;
}
message OpenRequest {
  ArgusModule module = 1;
}

message OpenResponse {
  enum Type {
    NOOP = 0;
    FETCH = 1;
  }
  message Login {
    ArgusModule module = 1;
  }
  message Notice {
    string url = 1;
    string requestId = 2;
    Type type = 3;
  }
  oneof Data {
    Login login = 1;
    Notice notice = 2;
  }
}

service FetchService {
  rpc fetch (stream FetchRequest) returns (stream FetchResponse) {}
}

message FetchRequest {
  bytes bytes = 1;
}

message FetchResponse {
  bytes bytes = 1;
  bool eof = 3;
}

message FetchData {
  string url = 1;
  string params = 2;
  string customized = 3;
  string namespace = 4;
}